2009-03-24  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_leave_notify_event): Check if the child is NULL
	to avoid sending the leave.

2009-03-24  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init),
	(hildon_pannable_leave_notify_event): Added a handler of the
	leave-notify-signal to consider when no motion notify before
	leaving.

	Fixes: NB#107494 (Items stay selected when clicking and moving
	away when inside pannable area)

2009-03-23  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.54]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-03-19  Alejandro G. Castro  <alex@igalia.com>

	Patch by Alberto Garcia (agarcia@igalia.com)

	* src/hildon-date-button.c,
	(hildon_date_button_class_init),
	(hildon_date_button_init): Removed the construct property handling
	and created a default selector in the init method.
	* src/hildon-picker-button.c,
	(hildon_picker_button_class_init): Removed the construct flag of the
	selector property.

2009-03-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-main.c (hildon_init):
	Don't allow hildon_init() to be called more than once.

	Fixes: NB#106607 (hildon_init should issue error message upon
	successive calls)

2009-03-17  Alejandro Pinheiro  <apinheiro@igalia.com>

	* examples/hildon-pannable-area-touch-list-example.c
	* examples/hildon-pannagle-area-touch-grid-example.c
	* examples/hildon-edit-toolbar-example.c
	* examples/hildon-touch-selector-multi-cells-example.c
	Removed the call to gtk_rc_parse_string, as it is not required since
	some time ago.

2009-03-17  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Modified the default panning
	threshold of the widget to 6px.

	Fixes: NB#105427 (Clicking and dragging ( for pixel values more
	than the threshold value ) within the button is not sending the
	event to the clild)
