@@ -1,3 +1,13 @@
+2009-03-24  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* src/hildon-banner.c (+hildon_banner_create_animation): Build a
+	simple GdkPixbufAnim using the new icons for the banner.
+	(hildon_banner_show_animation): Use the above mentioned method to
+	create the animation widget.
+
+	Fixes: NB#103564 (Make hildon animation banner use individual
+	image files as the animation)
+
 2009-03-24  Alejandro G. Castro  <alex@igalia.com>
 
 	* src/hildon-pannable-area.c,
